[package]
name = "ctrllr"
version = "0.1.0"
edition = "2021"
authors = ["TonyDuran"]
description = "A better bash history tool - version controlled, taggable, and shareable"
license = "AGPL-3.0"
repository = "https://github.com/TonyDuran/Ctrllr"
readme = "README.md"
keywords = ["cli", "history", "bash", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
